--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "builds": [
     {
       "src": "app/wsgi.py",
-      "use": "@ardnt/vercel-python-wsgi",
-      "config": { "maxLambdaSize": "15mb" }
+      "use": "@natanffs/vercel-python-wsgi",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     }
   ],
   "routes": [
